Update 700-upgrading-to-prisma-4.mdx (yarn upgrade -> yarn up)

--- a/content/200-orm/800-more/300-upgrade-guides/200-upgrading-versions/700-upgrading-to-prisma-4.mdx
+++ b/content/200-orm/800-more/300-upgrade-guides/200-upgrading-versions/700-upgrading-to-prisma-4.mdx
@@ -468,7 +468,7 @@ npm install prisma@4 @prisma/client@4
 <tab>
 
 ```terminal
-yarn upgrade prisma@4 @prisma/client@4
+yarn up prisma@4 @prisma/client@4
 ```
 
 </tab>
