Update index.mdx (yarn upgrade -> yarn up)

--- a/content/200-orm/800-more/300-upgrade-guides/200-upgrading-versions/800-upgrading-to-prisma-3/index.mdx
+++ b/content/200-orm/800-more/300-upgrade-guides/200-upgrading-versions/800-upgrading-to-prisma-3/index.mdx
@@ -153,7 +153,7 @@ npm install prisma@3 @prisma/client@3
 <tab>
 
 ```terminal
-yarn upgrade prisma@3 @prisma/client@3
+yarn up prisma@3 @prisma/client@3
 ```
 
 </tab>
